[FIX] mail: call settings select's options text visibility and styling
Before this commit, the call settings dropdown in light mode had several issues:
- Unreadable select options.
- Invisible select arrow icon.
- Barely visible toggle thumb when unchecked.
- Unnecessary border on dropdown click (in both light and dark mode).
- Incorrect spacing on the blur background toggle.

This commit resolves these issues by improving contrast with background color
changes, removing the border, and adjusting the toggle spacing.

task-5163527

X-original-commit: 576b2e610b5b353efe5baf22f9d93e9d98abce76

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -66,6 +66,20 @@ $o-discuss-talkingColor: lighten($success, 10%);
         select, .form-check-input {
             border-color: $gray-600;
         }
+
+        .form-select {
+            --#{$prefix}form-select-bg-img: #{escape-svg($form-select-indicator-dark)};
+        }
+
+        .form-switch .form-check-input {
+            &:not(:checked):not(:focus) {
+                --#{$prefix}form-switch-bg: #{escape-svg($form-switch-bg-image-dark)};
+            }
+        }
+
+        select option {
+            background-color: $gray-700;
+        }
     }
 
     .o_bottom_sheet_sheet:has(&) {
